links base blog

--- a/src/blog-page-5.html
+++ b/src/blog-page-5.html
@@ -172,8 +172,16 @@
               <li>
                 <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  >Depoimentos</a
+                >
+              </li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/endereco.html"
+                  >Endereço</a
+                >
+              </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
               </li>
@@ -300,8 +308,12 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Endereço</a
+            >
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -419,19 +431,29 @@
               </a>
               <ul>
                 <li>
-                  <a href="">1</a>
+                  <a href="http://www2.aclinicaoral.com.br/blog.html">1</a>
                 </li>
                 <li>
-                  <a href="">2</a>
+                  <a href="http://www2.aclinicaoral.com.br/blog-page-2.html"
+                    >2</a
+                  >
                 </li>
                 <li>
-                  <a href="">3</a>
+                  <a href="http://www2.aclinicaoral.com.br/blog-page-3.html"
+                    >3</a
+                  >
                 </li>
                 <li>
-                  <a href="">4</a>
+                  <a href="http://www2.aclinicaoral.com.br/blog-page-4.html"
+                    >4</a
+                  >
                 </li>
                 <li>
-                  <a href="" class="active-page-post">5</a>
+                  <a
+                    href="http://www2.aclinicaoral.com.br/blog-page-5.html"
+                    class="active-page-post"
+                    >5</a
+                  >
                 </li>
               </ul>
             </div>
