--- a/src/blog.html
+++ b/src/blog.html
@@ -308,8 +308,12 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Endereço</a
+            >
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -569,19 +573,23 @@
           <div class="list-pages-post">
             <ul>
               <li>
-                <a href="" class="active-page-post">1</a>
+                <a
+                  href="http://www2.aclinicaoral.com.br/blog.html"
+                  class="active-page-post"
+                  >1</a
+                >
               </li>
               <li>
-                <a href="">2</a>
+                <a href="http://www2.aclinicaoral.com.br/blog-page-2.html">2</a>
               </li>
               <li>
-                <a href="">3</a>
+                <a href="http://www2.aclinicaoral.com.br/blog-page-3.html">3</a>
               </li>
               <li>
-                <a href="">4</a>
+                <a href="http://www2.aclinicaoral.com.br/blog-page-4.html">4</a>
               </li>
               <li>
-                <a href="">5</a>
+                <a href="http://www2.aclinicaoral.com.br/blog-page-5.html">5</a>
               </li>
             </ul>
             <a href="" class="seta-right-page">
