--- a/src/blog-page-3.html
+++ b/src/blog-page-3.html
@@ -526,29 +526,39 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page1.html"
+                    class="link-post-recente"
                     >COVID-19: A importância da saúde bucal no fortalecimento da
                     imunidade</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page2.html"
+                    class="link-post-recente"
                     >Dente do siso: mitos e verdades</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page3.html"
+                    class="link-post-recente"
                     >Sensibilidade dentária: sintomas, causas e tratamento</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page4.html"
+                    class="link-post-recente"
                     >Mês do combate ao câncer: tudo o que você precisa saber
                     sobre câncer de boca</a
                   >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page5.html"
+                    class="link-post-recente"
                     >Diabetes e saúde bucal: dúvidas comuns</a
                   >
                 </div>
