--- a/src/page36.html
+++ b/src/page36.html
@@ -172,8 +172,16 @@
               <li>
                 <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  >Depoimentos</a
+                >
+              </li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/endereco.html"
+                  >Endereço</a
+                >
+              </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
               </li>
@@ -300,8 +308,12 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Endereço</a
+            >
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -384,29 +396,39 @@
                   <strong>Posts Recentes</strong>
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page1.html"
+                    class="link-post-recente"
                     >COVID-19: A importância da saúde bucal no fortalecimento da
                     imunidade</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page2.html"
+                    class="link-post-recente"
                     >Dente do siso: mitos e verdades</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page3.html"
+                    class="link-post-recente"
                     >Sensibilidade dentária: sintomas, causas e tratamento</a
                   >
                 </div>
                 <div class="link-recente-posts">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page4.html"
+                    class="link-post-recente"
                     >Mês do combate ao câncer: tudo o que você precisa saber
                     sobre câncer de boca</a
                   >
                 </div>
                 <div class="last-post-recent">
-                  <a href="" class="link-post-recente"
+                  <a
+                    href="http://www2.aclinicaoral.com.br/page5.html"
+                    class="link-post-recente"
                     >Diabetes e saúde bucal: dúvidas comuns</a
                   >
                 </div>
