--- a/src/contato.html
+++ b/src/contato.html
@@ -290,7 +290,7 @@
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="#localizacao">Endereço</a>
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
