--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -290,7 +290,7 @@
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="#localizacao">Endereço</a>
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -388,7 +388,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -398,7 +398,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
                 />
               </div>
