--- a/src/equipe.html
+++ b/src/equipe.html
@@ -291,7 +291,7 @@
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="#localizacao">Endereço</a>
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -317,7 +317,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Maria-Goreti-Nogueira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Goreti-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Maria Goreti Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -327,7 +327,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Fernanda-Natrieli-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Fernanda Natrieli Dentista Vila Olímpia"
                 />
               </div>
@@ -339,17 +339,17 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Caroline-Bernardo-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Caroline Bernardo Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Caroline Bernardo</span>
-              <p>Clínica Geral - CROSP 12131</p>
+              <p>Estética e Prótese - CROSP 12131</p>
             </div>
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Paloma-Valenzuela-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Paloma Valenzuela Dentista Vila Olímpia"
                 />
               </div>
@@ -359,12 +359,12 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Marina-Ferreira-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Marina-Ferreira-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Mariana Ferreira Dentista Vila Olímpia"
                 />
               </div>
               <span>Dra. Mariana Ferreira</span>
-              <p>Clínica Geral - CROSP 126457</p>
+              <p>Clínica Geral - Harmonizção Facial - CROSP 126457</p>
             </div>
           </div>
           <div class="equipe-info">
@@ -381,7 +381,7 @@
             <div class="equipe-curriculo">
               <div class="img-curriculo">
                 <img
-                  src="./resources/img/curriculo/Dra-Isabella-Louzada-Dentista-Vila-Olimpia.webp"
+                  src="./resources/img/curriculo/Dra-Isabella-Louzada-Dentista-Vila-Olimpia.png"
                   alt="Foto da Dra. Isabella Louzada Nogueira Dentista Vila Olímpia"
                 />
               </div>
@@ -404,12 +404,103 @@
               <div class="img-curriculo">
                 <img
                   src="./resources/img/curriculo/Dr-Lucas-Sicca-Dentista-Vila-Olímpia.webp"
-                  alt="Foto da Dr. Lucas Sicca Dentista Vila Olímpia"
+                  alt="Foto do Dr. Lucas Sicca Dentista Vila Olímpia"
                 />
               </div>
               <span>Dr. Lucas Sicca</span>
               <p>Tratamento de Canal (Endodontia) - CROSP 103182</p>
             </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Vitoria-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Vitoria Zaparoli Calisto Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Vitoria Zaparoli Calisto</span>
+              <p>Clinica Geral - CROSP 141235</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Kamilla-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Kamilla Guarim Andrade Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Kamilla Guarim Andrade</span>
+              <p>Clinica Geral - CROSP 144720</p>
+            </div>
+          </div>
+
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Julia-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Julia Teixeira Costa Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Julia Teixeira Costa</span>
+              <p>Clinica Geral - CROSP 157327</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Gabrielle-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Gabrielle Feitoza Bassi Costa Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Gabrielle Feitoza Bassi Costa</span>
+              <p>Ortodontia - CROSP 45723</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Fabia-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Fabia Piccoli Lobo Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Fabia Piccoli Lobo</span>
+              <p>Estética e Prótese - CROSP 55530</p>
+            </div>
+          </div>
+
+          <div class="equipe-info">
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Carolina-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Carolina Popp Leme Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Carolina Popp Leme</span>
+              <p>Ortodontia - CROSP 124782</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Amanda-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Amanda Zarpellon Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Amanda Zarpellon</span>
+              <p>Buco-Maxilo - CROSP 107223</p>
+            </div>
+
+            <div class="equipe-curriculo">
+              <div class="img-curriculo">
+                <img
+                  src="./resources/img/curriculo/Dra-Mariana-Araujo-Dentista-Vila-Olimpia.png"
+                  alt="Foto da Dra. Mariana Pereira Araujo Dentista Vila Olímpia"
+                />
+              </div>
+              <span>Dra. Mariana Pereira Araujo</span>
+              <p>Buco-Maxilo - CROSP 140004</p>
             </div>
           </div>
         </div>
