--- a/src/indexfelipe.html
+++ b/src/indexfelipe.html
@@ -289,7 +289,7 @@
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="#localizacao">Endereço</a>
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
