ajuste depoimentos novo

--- a/src/depoimentos.html
+++ b/src/depoimentos.html
@@ -172,8 +172,16 @@
               <li>
                 <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  >Depoimentos</a
+                >
+              </li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/endereco.html"
+                  >Endereço</a
+                >
+              </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
               </li>
@@ -300,8 +308,12 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Endereço</a
+            >
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -314,7 +326,7 @@
         <div class="container">
           <div class="box-depoimento">
             <h1>Depoimentos</h1>
-            <ul id="reviews-carousel"></ul>
+            <div id="reviews-carousel" class="slick-carousel"></div>
           </div>
           <div id="localizacao"></div>
         </div>
