--- a/src/teste-novo-depoimento.html
+++ b/src/teste-novo-depoimento.html
@@ -70,7 +70,7 @@
                 <a href="#" class="text-active">Tratamentos</a>
                 <ul class="submenu">
                   <li class="has-submenu--estetica">
-                    <a href="#">Estética</a>
+                    <a href="">Estética</a>
                     <ul class="submenu--estetica">
                       <li>
                         <a
@@ -322,31 +322,178 @@
         </nav>
       </header>
 
+      <section class="s-banner">
+        <div class="imgBanner">
+          <div class="background-overlay"></div>
+          <div class="container">
+            <div class="msgBanner">
+              <img
+                src="./resources/img/Logo-Dentista-Vila-Olímpia.webp"
+                alt=""
+                width="150"
+                height="150"
+              />
+              <div class="text-first">
+                <p>Conforto e sofisticação para você e seu sorriso</p>
+                <h1>Dentista Vila Olímpia</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-itens-menu">
+        <div class="container">
+          <div class="itens-index">
+            <p class="box-iten-index">Ortodontia</p>
+            <p class="box-iten-index">Clareamento Dental</p>
+            <p class="box-iten-index">Dentes do Siso</p>
+            <p class="box-iten-index">Lente de Contato Dental</p>
+          </div>
+          <div class="iten-tratamento">
+            <a href="">Todos os Tratamentos</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-itens-menu none">
+        <div class="container">
+          <h2>Principais Tratamentos</h2>
+          <div class="itens-tratamento">
+            <div class="item-tratamento">
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
+              <div class="text-tratamento">
+                <span>Ortodontia</span>
+              </div>
+            </div>
+            <div class="item-tratamento">
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
+              <div class="text-tratamento">
+                <span>Clareamento Dental</span>
+              </div>
+            </div>
+            <div class="item-tratamento">
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
+              <div class="text-tratamento">
+                <span>Dentes do Siso</span>
+              </div>
+            </div>
+            <div class="item-tratamento">
+              <div class="plus">
+                <img
+                  src="resources/icons/plus-icon.svg"
+                  alt="Mais tratamentos"
+                />
+              </div>
+              <div class="text-tratamento">
+                <span>Lente de Contato Dental</span>
+              </div>
+            </div>
+          </div>
+          <div class="iten-tratamento">
+            <a href="">Todos os Tratamentos</a>
+          </div>
+        </div>
+      </section>
+
       <section class="s-tratamento-base">
         <!-- <div class="container"> -->
         <div class="info-tratamento-base">
           <div class="tratamento-base-left p-10">
             <div class="content-tratamentoBase-left">
-              <h2>Lentes de Contato Dental</h2>
+              <h2>A Clínica Oral</h2>
               <p>
-                Com a evolução das propriedades mecânicas das cerâmicas
-                odontológicas, hoje é possível construir estruturas cerâmicas
-                ultra-finas (lentes de contato dentárias) com apenas 0,2 mm de
-                espessura que possibilitam um tratamento altamente estético e
-                minimamente invasivo, com mínimo desgaste ou em determinadas
-                situações nenhum desgaste dentário. As lentes de contato são
-                normalmente indicadas por razões estéticas, sendo capazes de
-                corrigir desde pequenas imperfeições de forma dental até dentes
-                anteriores com pequenas fraturas ou com diastemas. Podem ser
-                usadas ainda para disfarçar manchas dentárias e pequenas
-                descolorações.
+                Somos uma Clínica Odontológica com o objetivo de no mesmo espaço
+                integrar todas as especialidades, proporcionando um plano de
+                tratamento mais completo e personalizado. Contando com uma
+                equipe de profissionais graduados e pós-graduados pela USP e
+                outros Centros de Excelência buscamos constantemente trazer para
+                nossos pacientes o que a de melhor e mais moderno na
+                odontologia.
+              </p>
+              <a href="" class="agendarIndex" style="color: #fff"
+                >Agendar consulta</a
+              >
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/A-Clínica-Oral-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base invisalign-left">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Equipamentos de Última Geração</h2>
+              <p>
+                Investimos constantemente em tecnologia e aparelhos de última
+                geração, como sensores digitais de raio-X, câmeras intra-orais
+                para fotografias digitais, laser, softwares de imagens para
+                sempre oferecer o melhor serviço para nossos pacientes.
               </p>
             </div>
           </div>
           <div class="tratamentoBase-right">
             <div class="img-right-tratamentoBase">
               <img
-                src="./resources/img/Facetas-de-Porcelana-Vila-Olímpia.jpg"
+                src="./resources/img/Equipamentos-de-Última-Geração-Dentista-Vila-Olímpia.jpg"
+                alt=""
+                width="1000"
+                height="667"
+                class="ml-2"
+              />
+            </div>
+          </div>
+        </div>
+        <!-- </div> -->
+      </section>
+
+      <section class="s-tratamento-base">
+        <!-- <div class="container"> -->
+        <div class="info-tratamento-base">
+          <div class="tratamento-base-left p-10">
+            <div class="content-tratamentoBase-left">
+              <h2>Espaço Aconchegante</h2>
+              <p>
+                Criamos um espaço aconchegante para seu conforto, climatizado e
+                com rede wireless. Contando ainda com iPads disponíveis para
+                você agilizar seus compromissos ou simplesmente navegar em seus
+                sites prediletos. Todas as salas são equipadas com TVs e fones
+                sem fio, travesseiros e cobertores para conforto do paciente
+                durante o atendimento.
+              </p>
+            </div>
+          </div>
+          <div class="tratamentoBase-right">
+            <div class="img-right-tratamentoBase">
+              <img
+                src="./resources/img/Espaco-Aconchegante-Dentista-Vila-Olímpia.jpg"
                 alt=""
                 width="1000"
                 height="667"
@@ -389,6 +536,7 @@
                 />
               </div>
               <span>Dra. Fernanda Natrieli</span>
+              <div id="depoimentos"></div>
               <p>Pediatra, Clínica Geral e Endodontia - CROSP 60860</p>
             </div>
           </div>
@@ -401,6 +549,7 @@
             <h1>Depoimentos</h1>
             <div id="reviews-carousel" class="slick-carousel"></div>
           </div>
+          <div id="localizacao"></div>
         </div>
       </section>
 
@@ -477,7 +626,6 @@
         </div>
       </footer>
     </main>
-
     <script src="./resources/js/main.js"></script>
 
     <!--API Google-->
@@ -494,6 +642,66 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script>
+      function initMap() {
+        var service = new google.maps.places.PlacesService(
+          document.createElement('div')
+        )
+        var request = {
+          placeId: 'ChIJfZbyEzhXzpQRlhDURW4spRU'
+        }
+        service.getDetails(request, function (place, status) {
+          if (status == google.maps.places.PlacesServiceStatus.OK) {
+            var reviews = place.reviews
+            var reviewsContainer = document.getElementById('reviews-carousel')
+            for (var i = 0; i < reviews.length; i++) {
+              var review = reviews[i]
+              if (review.rating >= 4) {
+                // Verifica se o rating é maior ou igual a 4
+                var div = document.createElement('div')
+                div.className = 'depoimentos-itens'
+                div.innerHTML =
+                  '<img src="' +
+                  review.profile_photo_url +
+                  '" alt="">' +
+                  '<h3>' +
+                  review.author_name +
+                  '</h3>' +
+                  '<p><div class="text-apost"><p class="apost">' +
+                  review.text +
+                  '</p>' +
+                  '<div class="rating-depoimentos">'
+                for (var j = 1; j <= 5; j++) {
+                  if (j <= review.rating) {
+                    div.innerHTML += '<span class="fa fa-star checked"></span>'
+                  } else {
+                    div.innerHTML += '<span class="fa fa-star"></span>'
+                  }
+                }
+                div.innerHTML += '</div>'
+                reviewsContainer.appendChild(div)
+              }
+            }
+
+            $(reviewsContainer).slick({
+              slidesToShow: 1,
+              slidesToScroll: 1,
+              arrows: true,
+              dots: true,
+              responsive: [
+                {
+                  breakpoint: 768,
+                  settings: {
+                    slidesToShow: 1
+                  }
+                }
+              ]
+            })
+          }
+        })
+      }
+
+      initMap()
+    </script>
   </body>
 </html>
