--- a/src/tratamento-da-gengiva.html
+++ b/src/tratamento-da-gengiva.html
@@ -161,8 +161,16 @@
               <li>
                 <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  >Depoimentos</a
+                >
+              </li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/endereco.html"
+                  >Endereço</a
+                >
+              </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
               </li>
@@ -289,8 +297,12 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Endereço</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Endereço</a
+            >
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -397,7 +409,13 @@
       </section>
 
       <section class="s-depoimento">
-        <div class="container"></div>
+        <div class="container">
+          <div class="box-depoimento">
+            <h1>Depoimentos</h1>
+            <div id="reviews-carousel" class="slick-carousel"></div>
+          </div>
+          <div id="localizacao"></div>
+        </div>
       </section>
 
       <section class="s-localizacao">
