ajuste depoimentos novo

--- a/src/blog-page-2.html
+++ b/src/blog-page-2.html
@@ -644,6 +644,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
