--- a/src/disfuncao-do-atm.html
+++ b/src/disfuncao-do-atm.html
@@ -308,17 +308,19 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-<<<<<<< HEAD
+            <<<<<<< HEAD
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Depoimentos</a
             >
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Endereço</a
             >
-=======
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
+            =======
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
             <a href="#localizacao">Endereço</a>
->>>>>>> 7b6e466f33e27f113e0ebd2f4d92b9b1dc73cee7
+            >>>>>>> 7b6e466f33e27f113e0ebd2f4d92b9b1dc73cee7
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -498,6 +500,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
