--- a/src/page11.html
+++ b/src/page11.html
@@ -308,17 +308,19 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-<<<<<<< HEAD
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
+            <<<<<<< HEAD
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
             <a href="#localizacao">Endereço</a>
-=======
+            =======
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Depoimentos</a
             >
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Endereço</a
             >
->>>>>>> f8c0045cc1161ed3b8db6e8d9ba463548c81c142
+            >>>>>>> f8c0045cc1161ed3b8db6e8d9ba463548c81c142
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -546,6 +548,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
