--- a/src/blog-page-4.html
+++ b/src/blog-page-4.html
@@ -645,6 +645,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
