--- a/src/page15.html
+++ b/src/page15.html
@@ -556,6 +556,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
