--- a/src/page26.html
+++ b/src/page26.html
@@ -495,6 +495,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
