--- a/src/page28.html
+++ b/src/page28.html
@@ -509,6 +509,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
