--- a/src/page32.html
+++ b/src/page32.html
@@ -526,6 +526,6 @@
     ></script>
 
     <!--Lógica API Google Depoimentos-->
-    <script src="./resources/js/apiGoogle.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
