ajustes depoimentos em todas paginas

--- a/src/cirurgia-ortognatica.html
+++ b/src/cirurgia-ortognatica.html
@@ -512,5 +512,6 @@
       </footer>
     </main>
     <script src="./resources/js/main.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
