--- a/src/tratamento-de-canal.html
+++ b/src/tratamento-de-canal.html
@@ -297,17 +297,19 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-<<<<<<< HEAD
+            <<<<<<< HEAD
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Depoimentos</a
             >
             <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
               >Endereço</a
             >
-=======
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
+            =======
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
             <a href="#localizacao">Endereço</a>
->>>>>>> 7b6e466f33e27f113e0ebd2f4d92b9b1dc73cee7
+            >>>>>>> 7b6e466f33e27f113e0ebd2f4d92b9b1dc73cee7
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
           </div>
@@ -469,5 +471,6 @@
       </footer>
     </main>
     <script src="./resources/js/main.js"></script>
+    <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
