--- a/src/blog-page-3.html
+++ b/src/blog-page-3.html
@@ -508,13 +508,15 @@
               </div>
             </div>
             <div class="blog-news-right">
-              <div class="call">
-                <a
-                  class="button-wpp"
-                  href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
-                  onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                  ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
-                >
+              <div class="blog-right-agendar-consulta">
+                <div class="call">
+                  <a
+                    class="button-wpp"
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                    onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+                    ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                  >
+                </div>
               </div>
 
               <div class="search-blog">
