ajuste seta link blog

--- a/src/blog-page-4.html
+++ b/src/blog-page-4.html
@@ -565,7 +565,10 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
-              <a href="" class="seta-left-page">
+              <a
+                href="http://www2.aclinicaoral.com.br/blog-page-3.html"
+                class="seta-left-page"
+              >
                 <i class="fa fa-angle-left"></i>
               </a>
               <ul>
@@ -595,7 +598,10 @@
                   >
                 </li>
               </ul>
-              <a href="" class="seta-right-page">
+              <a
+                href="http://www2.aclinicaoral.com.br/blog-page-5.html"
+                class="seta-right-page"
+              >
                 <i class="fa fa-angle-right"></i>
               </a>
             </div>
