--- a/src/blog-page-5.html
+++ b/src/blog-page-5.html
@@ -50,15 +50,13 @@
     <main>
       <header>
         <nav>
-          <div class="blog-right-agendar-consulta">
-            <div class="call">
-              <a
-                class="button-wpp"
-                href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
-                onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
-              >
-            </div>
+          <div class="call">
+            <a
+              class="button-wpp"
+              href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+              onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+              ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+            >
           </div>
 
           <div class="main-menu">
@@ -379,13 +377,15 @@
               </div>
             </div>
             <div class="blog-news-right">
-              <div class="call">
-                <a
-                  class="button-wpp"
-                  href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
-                  onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
-                  ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
-                >
+              <div class="blog-right-agendar-consulta">
+                <div class="call">
+                  <a
+                    class="button-wpp"
+                    href="https://api.whatsapp.com/send?phone=5511988711774&amp;text=Oi, gostaria de agendar uma consulta"
+                    onclick=" ga('send', 'event', 'whatsapp message', 'asc-mobile-desktop', 'botao 1');"
+                    ><i class="fa fa-whatsapp"></i> Agendar Consulta</a
+                  >
+                </div>
               </div>
 
               <div class="search-blog">
@@ -438,7 +438,10 @@
           </div>
           <div class="list-itens-posts-pages">
             <div class="list-pages-post">
-              <a href="" class="seta-left-page">
+              <a
+                href="http://www2.aclinicaoral.com.br/blog-page-4.html"
+                class="seta-left-page"
+              >
                 <i class="fa fa-angle-left"></i>
               </a>
               <ul>
