--- a/src/blog.html
+++ b/src/blog.html
@@ -602,7 +602,10 @@
                 <a href="http://www2.aclinicaoral.com.br/blog-page-5.html">5</a>
               </li>
             </ul>
-            <a href="" class="seta-right-page">
+            <a
+              href="http://www2.aclinicaoral.com.br/blog-page-2.html"
+              class="seta-right-page"
+            >
               <i class="fa fa-angle-right"></i>
             </a>
           </div>
