ajustes link active

--- a/src/blog.html
+++ b/src/blog.html
@@ -62,9 +62,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
-                  >Início</a
-                >
+                <a href="http://www2.aclinicaoral.com.br/">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -183,7 +181,11 @@
                 >
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
+                <a
+                  href="http://www2.aclinicaoral.com.br/blog.html"
+                  class="link-active"
+                  >Blog</a
+                >
               </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/contato.html"
