--- a/src/day-clinic.html
+++ b/src/day-clinic.html
@@ -63,9 +63,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
-                  >Início</a
-                >
+                <a href="http://www2.aclinicaoral.com.br/">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -166,7 +164,9 @@
                 </ul>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/day-clinic.html"
+                <a
+                  href="http://www2.aclinicaoral.com.br/day-clinic.html"
+                  class="link-active"
                   >Day Clinic</a
                 >
               </li>
