--- a/src/depoimentos.html
+++ b/src/depoimentos.html
@@ -62,9 +62,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
-                  >Início</a
-                >
+                <a href="http://www2.aclinicaoral.com.br/">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -173,7 +171,9 @@
                 <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                <a
+                  href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  class="link-active"
                   >Depoimentos</a
                 >
               </li>
