--- a/src/equipe.html
+++ b/src/equipe.html
@@ -37,7 +37,6 @@
   </head>
   <body>
     <main>
-      
       <header>
         <nav>
           <div class="call">
@@ -52,9 +51,7 @@
           <div class="main-menu">
             <ul class="menu">
               <li>
-                <a href="http://www2.aclinicaoral.com.br/" class="link-active"
-                  >Início</a
-                >
+                <a href="http://www2.aclinicaoral.com.br/">Início</a>
               </li>
               <li class="has-submenu">
                 <a href="#" class="text-active">Tratamentos</a>
@@ -160,10 +157,22 @@
                 >
               </li>
               <li>
-                <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
+                <a
+                  href="http://www2.aclinicaoral.com.br/equipe.html"
+                  class="link-active"
+                  >Equipe</a
+                >
               </li>
-              <li><a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a></li>
-              <li><a href="http://www2.aclinicaoral.com.br/endereco.html">Endereço</a></li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+                  >Depoimentos</a
+                >
+              </li>
+              <li>
+                <a href="http://www2.aclinicaoral.com.br/endereco.html"
+                  >Endereço</a
+                >
+              </li>
               <li>
                 <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
               </li>
@@ -290,7 +299,9 @@
               </option>
             </select>
             <a href="http://www2.aclinicaoral.com.br/equipe.html">Equipe</a>
-            <a href="http://www2.aclinicaoral.com.br/depoimentos.html">Depoimentos</a>
+            <a href="http://www2.aclinicaoral.com.br/depoimentos.html"
+              >Depoimentos</a
+            >
             <a href="#localizacao">Endereço</a>
             <a href="http://www2.aclinicaoral.com.br/blog.html">Blog</a>
             <a href="http://www2.aclinicaoral.com.br/contato.html">Contato</a>
@@ -376,7 +387,10 @@
                 />
               </div>
               <span>Dr. André Sakima</span>
-              <p>Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial - CROSP 66494</p>
+              <p>
+                Implantodontia e Cirurgia e Traumatologia Bucomaxilofacial -
+                CROSP 66494
+              </p>
             </div>
             <div class="equipe-curriculo">
               <div class="img-curriculo">
