--- a/src/restauracao-dentaria.html
+++ b/src/restauracao-dentaria.html
@@ -8,7 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="./resources/css/main.css" />
     <link rel="stylesheet" href="./resources/css/header-mobile.css" />
-    <link rel="stylesheet" href="./resources/sass/header.css" />
+    <!-- <link rel="stylesheet" href="./resources/sass/header.css" /> -->
 
     <!--Font Awesome-->
     <link
@@ -31,6 +31,18 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400&family=Open+Sans:wght@400;700&family=Poppins:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
+    />
+
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
     />
 
     <title>A clinica Oral</title>
@@ -392,7 +404,6 @@
             <h1>Depoimentos</h1>
             <div id="reviews-carousel" class="slick-carousel"></div>
           </div>
-          <div id="localizacao"></div>
         </div>
       </section>
 
@@ -470,6 +481,21 @@
       </footer>
     </main>
     <script src="./resources/js/main.js"></script>
+
+    <!--API Google-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd4U5ETE1wjqnXCVxoMBtx8Ez4Y2QBOUo&libraries=places"></script>
+    <!--Carrousel-->
+
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    ></script>
+
     <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
