--- a/src/tratamento-da-gengiva.html
+++ b/src/tratamento-da-gengiva.html
@@ -33,6 +33,18 @@
       rel="stylesheet"
     />
 
+    <!--Carrousel-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    />
+
     <title>A clinica Oral</title>
   </head>
   <body>
@@ -421,7 +433,6 @@
             <h1>Depoimentos</h1>
             <div id="reviews-carousel" class="slick-carousel"></div>
           </div>
-          <div id="localizacao"></div>
         </div>
       </section>
 
@@ -499,6 +510,21 @@
       </footer>
     </main>
     <script src="./resources/js/main.js"></script>
+
+    <!--API Google-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd4U5ETE1wjqnXCVxoMBtx8Ez4Y2QBOUo&libraries=places"></script>
+    <!--Carrousel-->
+
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    ></script>
+
     <script src="./resources/js/apiGoogle2.js"></script>
   </body>
 </html>
